--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -1,10 +1,10 @@
 \documentclass[10pt,b5jsbook,dvips,dvipdfmx,openany]{jsbook}
 
-\usepackage[explicit]{titlesec}
-\usepackage{picture}
-\usepackage[usenames]{color}
+\usepackage[explicit]{titlesec} %章立てのレイアウト変更
+\usepackage{picture} %色付きの箱を作ったり
+\usepackage[usenames]{color} %すきな色を作れます
 \usepackage{amsmath}%数式を使うならまずこれ!
-%\usepackage{amssymb}%特殊な記号を使いたいならとりあえずこれ!
+\usepackage{amssymb}%特殊な記号を使いたいならとりあえずこれ!
 \usepackage{mathrsfs}%カッコいい花文字を使うときはこれ!
 \usepackage{bm} %数式の太字
 \usepackage{braket} %ブラケットを作るには必要
