Updates from ShareLaTeX

--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -949,7 +949,7 @@
 
 			文学部のSさん, 「遊ぶんがくぶ」などと揶揄されるもどこ吹く風, 京大オケと教職課程で超多忙なよう. 実はこの原稿もかなりギリギリに大急ぎで提出してもらいました. レポートで忙しいのにありがとう. というかこのスケジュールでよくちゃんと生きてるな. 一番右, 大学院工学研究科のMさんもそれなりにハードな生活のよう. そもそも桂キャンパスに通学するのが結構体力を使うのだとか. ちなみに行きと帰りで所要時間が異なるのは道路が夜の方がすいているためだそう. 「理論系なので基本的にデスクワークだし, 実験系と違ってコアタイムなどの拘束がない分楽だと思います」は本人の弁. そして中央の人間健康科学科Mさん. 18時は5限の終わる時間なのですが大丈夫でしょうか. 「夜は寝るもの」という常識からも解き放たれた生活を送っているようです. 
 			
-			このように, 寮生それぞれの生活リズムで生きています. もちろん, 周りに寝ている人がいる場合は少し静かにするなどの配慮は必要です. お互いの生活習慣に理解を持ちながら, いい寮生活を送ってくださいね. 
+			このように, 寮生それぞれの生活リズムで生きています. もちろん,周りに寝ている人がいる場合は少し静かにするなどの配慮は必要です. お互いの生活習慣に理解を持ちながら, いい寮生活を送ってくださいね. 
 			
 \newpage
 	\section{座談会コーナー}
@@ -1468,7 +1468,7 @@
 		
 		こう見ると難しそうですが, 最近は割と簡単に\LaTeX を使うための環境が作れます. コマンドは調べていくうちに覚えるし何も難しいことはない! 最近ではWordでも数式機能が強化されたりしているようですが, 多分使い勝手の面では\TeX には及ばないのではないでしょうか. 
 		
-		と, 結構便利な\LaTeX なんですが, とにかく使いこなせる人が少ない! 京大生の過半数が理解なのに. そんなわけで熊野寮の(入退寮選考委員会では) \LaTeX を使える人材を募集しています. ぜひおいでください. 
+		と, 結構便利な\LaTeX なんですが, とにかく使いこなせる人が少ない! 京大生の過半数が理系なのに. そんなわけで熊野寮の(入退寮選考委員会では) \LaTeX を使える人材を募集しています. ぜひおいでください. 
 		
 		
 		\subsection{終わりに}
