入寮オリテの時間を追加

--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -349,7 +349,9 @@
 \end{tabular}
 \end{table}			
 \subsubsection{入寮オリエンテーション}
-			3月30日(土)ahoge時からの入寮オリエンテーションに参加すること. また, これに不参加の者は強制退寮となる場合があるので, 必ず参加のこと. 
+			3月30日(土)14時からの入寮オリエンテーションに参加すること. また, これに不参加の者は強制退寮となる場合があるので, 必ず参加のこと. 
+			
+			所要時間: 3時間程度
 
 %以下英語版. 本誌に掲載する場合はコメントアウトを解除する
 %\section{Admission Guidelines for International Students}
