座談会の不敵箇所を削除

--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -565,8 +565,7 @@
 
  		ともすれば誤解されてしまう, しかし本当は非常に重要な寮自治会の内実を, しっかりと社会に発信し, 地域の方々と顔の見える関係をつくる中で広げていこうというのが「くまのまつり」の取り組みです.  
  
-		今でこそ, 盛大なお祭になった「くまのまつり」ですが, はじめからそうだったわけではありません. 寮生や寮外の協力者がお店や知人に呼びかける中で, 毎年少しずつ輪が広がっていき, このような盛大なお祭へと成長していきました. やりたいと思ったことを何でも実行に移せるのが自治寮のいいところです. 「くまのまつり」は自治会のもつ無限の可能性の一つを示す取り組みだと思います. 入寮を検討される皆さんには入寮してもしなくてもぜひ「くまのまつり」に遊びに来てほしいと思います. もっと言えば一緒にお祭をつくりましょう! 
-できれば入寮して一緒にやりましょう! 
+		今でこそ, 盛大なお祭になった「くまのまつり」ですが, はじめからそうだったわけではありません. 寮生や寮外の協力者がお店や知人に呼びかける中で, 毎年少しずつ輪が広がっていき, このような盛大なお祭へと成長していきました. やりたいと思ったことを何でも実行に移せるのが自治寮のいいところです. 「くまのまつり」は自治会のもつ無限の可能性の一つを示す取り組みだと思います. 入寮を検討される皆さんには入寮してもしなくてもぜひ「くまのまつり」に遊びに来てほしいと思います. もっと言えば一緒にお祭をつくりましょう! できれば入寮して一緒にやりましょう! 
 
 		皆でアイデアを出し合いながらお祭を創りあげていく過程, ご近所の人と出会い語る中で新たな関係を創りあげていく過程では, かけがえのない団結が生まれます. それが熊野寮をよりよい自治寮に変えていく何よりのエネルギーなのです. 
 	\begin{figure}[h]
@@ -619,7 +618,7 @@
 	「自治」とは何なのでしょうか. 辞書には「自分たちのことを自ら処理すること. 特に, 地方公共団体や大学がその範囲での行政$ \cdot $ 事務を自主的に行うこと(岩波国語辞典) 」と書いてあります. すこし幅が広すぎてよくわかりませんね. 
 
 	ですが, 熊野寮の自治とは非常に単純です. それは「熊野寮のことについては熊野寮生が取り決め運営する」という, ただそれだけのことです. 
-「そんなことわざわざ確認しなくてもあたりまえ」という人がいるかもしれません. しかしながら, 熊野寮が誇る「自治」のすばらしさは, それをとことん追求していることにあります. 
+    「そんなことわざわざ確認しなくてもあたりまえ」という人がいるかもしれません. しかしながら, 熊野寮が誇る「自治」のすばらしさは, それをとことん追求していることにあります. 
 
 	たとえば, 現在政府は学生に学生寮の入退寮権(どのような学生を寮に入れるか判断する権利) を認めていません. 従って, 全国のほとんどの大学では学生寮には大学が許可した学生のみが入寮するようになっています. では, どうして熊野寮では入退寮権を学生組織である熊野寮自治会が持っているのでしょうか. それは, 熊野寮生が「自分たちのことは自分たちで決める」と国や大学の決定に対し闘って, 勝ち取ったからです. 
 
@@ -1144,9 +1143,9 @@
 		\item[睡眠過多]新歓期とか毎日のように新歓コンパがあったけど, 毎日「なんて楽しいんだ」って思ってた. お酒飲まないけどコンパの雰囲気はとても好き. 
 		\item[やくざ]人間関係で困ることってあるかなあ. 
 		\item[兄さん]あまり事例を聞かないけど, 同部屋の人とあまりにそりが合わないと辛いかもね. 
-		\item[さんた]うちで事例があったなあ. あまりにイビキがうるさい新入寮生とあまりにイビキが気になる人が同じ部屋になっちゃって. 最終的に新入寮生が違う部屋に引っ越しすることで解決した. 
-		\item[やくざ]最悪の場合, 寮内で引っ越しができるんだよね. 
-		\item[ 一同 ]そうなんだよね. 
+		%%\item[さんた]うちで事例があったなあ. あまりにイビキがうるさい新入寮生とあまりにイビキが気になる人が同じ部屋になっちゃって. 最終的に新入寮生が違う部屋に引っ越しすることで解決した. 
+		%\item[やくざ]最悪の場合, 寮内で引っ越しができるんだよね. 
+		%\item[ 一同 ]そうなんだよね. 
 		\item[もっちー]会話全然ない部屋とかある? 
 		\item[ 一同 ]ある. 
 		\item[睡眠過多]いい意味で互いに干渉しない. 
@@ -1466,7 +1465,7 @@
 		
 		\verb|H_{F} = \hbar c \sum^{d-1} _{r=1} \int dk \ \omega(k) a_r(k)^{*} a_r(k) | 
 		
-		という命令で書かれています. 数式を作るだけでなく, このパンフのレイアウトから文字サイズ, フォントに変更に至るまであらゆる部分をこのような命令で作っていくわけです. 実際, このパンフではレイアウトはそこそこ特殊な命令で作っています. 
+		という命令で書かれています. 数式を作るだけでなく, このパンフのレイアウトから文字サイズ, フォントに変更に至るまであらゆる部分をこのような命令で作っていくわけです. 実際, このパンフではレイアウトはそこそこ,と言うか結構凝った命令で作っています. 
 		
 		こう見ると難しそうですが, 最近は割と簡単に\LaTeX を使うための環境が作れます. コマンドは調べていくうちに覚えるし何も難しいことはない! 最近ではWordでも数式機能が強化されたりしているようですが, 多分使い勝手の面では\TeX には及ばないのではないでしょうか. 
 		
@@ -1526,7 +1525,7 @@
 		\item 親戚だけはちょっとうるさい. 
 		\end{itemize}
 		って感じなので, もしも頑張って合格した大学であんまりうまくいかなくても, 悲観せず, 悩み過ぎずに自分のペースで生きていきましょう. 今は特に参考にならないと思いますが, いつか必要になるかもしれない誰かに宛てて綴りました. 
-ようこそ京都大学へ, ようこそ熊野寮へ. あなたの大学生活と寮生活が, 喜びと彩りに溢れたものになりますように. 
+        ようこそ京都大学へ, ようこそ熊野寮へ. あなたの大学生活と寮生活が, 喜びと彩りに溢れたものになりますように. 
 
 \rightline{(mtmt)}
 
