座談会の不適切箇所を削除

--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -1152,7 +1152,7 @@
 		\item[やくざ]部屋の中で盛り上がるところってあんまりないよね? 
 		\item[姉さん]うちは盛り上がる. 明日も部屋で鍋するし, 部屋のみんなで出かけたりもする. あとA3の女性陣で鍋したり. 
 		\item[兄さん]女性陣で仲良くなったりもしてるよね. 
-		\item[さんた]あれれ? 同じ階に女性がいる? ? ? 不思議だなあ? ? \footnote{防犯上の観点から1階には女子が住んでいない. さんたは1階の住人である. }
+		%\item[さんた]あれれ? 同じ階に女性がいる? ? ? 不思議だなあ? ? \footnote{防犯上の観点から1階には女子が住んでいない. さんたは1階の住人である. }
 		\item[やくざ]部屋は個人のスペースだから同部屋の人と盛り上がったりはしないけど, 談話室や食堂では交流する, って住み分けをしてるとこが一番多いんじゃないかな. 部屋によっては部屋で盛り上がるところもあるだろうけど. 
 		\item[兄さん]過去には同部屋で仲良くなりすぎた結果, ベッドを取っ払ってみんなで布団敷いて雑魚寝してた部屋なんてのもあったらしい. 
 		\item[やくざ]部屋によるとしか言いようがないね. でも交流しようと思えばいくらでもできる. したくないときは...どうすればいいんだろうね. 
