寮生の声改変

--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -1402,6 +1402,112 @@
 
 \chapter{寮生の声}
 
+
+	\section{転学部$ < 並びに留年 \cdot 休学 > $ のすすめ}
+		\subsection{前書き}
+		こんな分厚いパンフをまじめに読んでくれている皆さんこんにちは. 私は今5回生です. 1月にこの原稿を書いていて, 3月には京大を退学して東京で就職しようと計画しています(今のところ) .
+
+		初めに本編と関係ないメッセージを伝えたいのですが, 私にとって熊野寮は本当に楽しく素晴らしい家であり, 遊び場でした. 先輩$ \cdot $ 友達$ \cdot $ 後輩$ \cdot $ その他, みんな仲良くしてくれて, とても沢山の人々を好きになりました(それよりかはめっちゃ少ないですけど, 嫌いになったりぶつかったりした人も多々) . ダンス$ \cdot $ ドラム$ \cdot $ 徹底討論$ \cdot $ ローション相撲など, 入寮してなければ一生できなかったかもしれないことを一杯やりました. この5年間で考え方や人格がかなり変わったと思うし, ここにいた時間のことを一生覚えていたいと思っています.
+
+		このパンフを手に取る人の多くは受験生の方だと思いますが, 合格したら是非入寮すべきですよ. 何ならもし落ちたとしても寮に入るために浪人する価値がありますよ. あなた方の先輩になる新2回生は近年稀にみる仲良し学年なので, 楽しく優しく新入生になる面倒を見てくれるはずです. (1回生じゃないあなたも安心してください. 年上ともフランクに仲良くしてくれるいい人たちです. ) %この段落削除すべき?(松本) %いいんじゃないかな. 知らんけど(松原)
+とにかく, まず見学に来てみてください. 私が案内できたらいいな.
+
+		\subsection{本編}
+		私が卒業を諦めた理由は複雑ですが, その大きな一つに「学科が合わなかった」というものがあります. 受験生の時って勉強に追われてるからそもそも進路について考える余裕が意外と無いし, 18の時点で天道を選べる人の方が少ないと思います. (自分は理系受験に決まった時点で, 総合人間学部や教育学部などの選択肢をなぜかシャットアウトしてました. 泣)
+
+		そこでおすすめなのが転学部です. 最初はみんな不満とかはないと思うんですけど, 専門が増えてきたら, なんかやりたいことと違うなぁ, となったとき... 京都大学には, 専攻を変えることのできる制度があります!
+
+		$\downarrow$詳しくはコチラ$\downarrow$
+
+		\url{https://www.gssc.kyoto-u.ac.jp/counsel/students.html}
+
+		簡単に言うと, 毎年10月$ \sim $ 1月くらいに書類出して面接受かったら学部や学科を変えられるという制度ですね. 入試の点数を照会して, 資格がある場合のみ出願できます. 受け付けてない学部もあります(例えば医学科は受け入れが無いし, 多くの学部では理転$ \cdot $ 文転は認めてないとか) . 大学思ったよりつまんないなーとか, なんか通うのツラいなーとかおもったら検討してみてください. 本部にはカウンセリングルームがあるので, 相談にも乗って貰えますよ. 自分のようにリタイアを選ぶ学生が減ることを願って! まだまだ学歴あった方がいいに決まってる社会なので! 卒業したかったな! ! !
+
+		\subsection{おまけ}
+		私は3留確定した末に多分退学するわけなんですけど, 結構長期にわたって深々と悩んでしまいました. 自称進学校と進学塾の管理教育に過剰適応しすぎて, 自由を与えられた途端全っ然使いこなせなくてめちゃくちゃになっちゃいました. そして今就活してますが, もちろん収入レベルは大卒より落ちそうですけど, 探せば楽しそうで暮らせそうな職がたくさんあることがわかりました. 最近は中退者$ \cdot $ 留年者向けの就職サービスも充実してきています.
+		\begin{itemize}
+		\item 留年しても死にません.
+		\item 卒業できなくても死にません.
+		\item 友達も親も, 意外と私を見捨てません.
+		\item 親戚だけはちょっとうるさい.
+		\end{itemize}
+		って感じなので, もしも頑張って合格した大学であんまりうまくいかなくても, 悲観せず, 悩み過ぎずに自分のペースで生きていきましょう. 今は特に参考にならないと思いますが, いつか必要になるかもしれない誰かに宛てて綴りました.
+        ようこそ京都大学へ, ようこそ熊野寮へ. あなたの大学生活と寮生活が, 喜びと彩りに溢れたものになりますように.
+
+\rightline{(mtmt)}
+
+	\section{$<陳謝>$ タイトル思いつきませんでした} %荒瀬のやつ
+	入寮パンフに何か書きたいなーってぼんやり思いつつ何もアクション起こさずにいたら「卒寮予定の立場からなんか書いてほしい」ってちょうど言われたので喜びいさんで書いてます. というわけで, 2019年3月で卒業(卒寮)予定の人です(頑張ってあと2単位取ります).
+
+	私は1回生の春からずっと住んでるんですが, 実を言うと, 最初はお金貯まったら引っ越して一人暮らししようと思ってました. だって, 入寮前にどんだけ熊野寮のこと調べても, 中核派の拠点とかここ入ったら留年するとかとにかく汚くて虫だらけとか常に学生服着たヤバい奴いるとか, そんな情報しか出てこないんですよ(当時は). とにかく下宿するお金もないししょうがないと, 不安に満ちあふれた心を抱いて渋々入寮したクチです. それがどうでしょう. 気づけばもう足かけ5年(結局留年した), 今では終わりゆく寮生活を心から惜しむほどの愛着が湧いてしまっています.
+
+	もちろん嫌なこともいっぱいあって, 何回も途中で「(もう無理退寮しよ)」って思いました. でもその都度私を思い留まらせてくれたのは, 寮で出会ったたくさんの大切な人たちと, 安すぎる生活コスト. 特に後者. 親のすねはもう痩せ細りすぎて齧るほど残っていなかったし, 私は労働というものを毛嫌いしていたので(バイトに溶かす時間があるなら, 本読んだり映画を観たり惰眠を貪ったりしたい). また前者について, ここでは語り尽くせないほどの密な人間関係を実践$ \cdot $ 観測しました. 400人超の男女その他交々が寄り集まって生活してればそりゃそうなる. 基本受身な私にも, ポップな話題からディープな議題まで語り合える大事な友達がいっぱいできました.
+
+	何か短くまとめようとしたのに長くなってしまった. とにかく, ある意味クセの強い空間で, 合わない人がいることは認めます. すぐ退寮しちゃう人も結構いるし. でもこの冗長な文章を読んでくれるくらい優しくて暇を持て余した人なら大丈夫だと思うので, 入寮予備軍のあなたは是非. 私を探し出して「パンフ読みました! 」って言ってくれたらご飯ぐらい奢りますよ. お金なかったら人違いですって言うけど.
+
+	\rightline{(文: Chageじゃないほう)}
+
+
+	\section{このパンフのあれこれ}
+
+		\subsection{はじめに}
+	みなさんこんにちは, このパンフの編集を担当している寮生です. 編集長は\pageref{page:座談会}ページの座談会で紹介されている通りインテリヤクザ君で, 実際に原稿を集めたり編集方針を決めてもらってますが, そんな編集長殿の命令でそれをこの形に書き起こしているのが私です. 修士課程の院生が一回生にこき使われるくらいこの寮では上下関係というものがないです. そんなわけでこのパンフ編集のとある裏話をしたいと思います.
+
+		\subsection{パンフの作り方}
+		こういうパンフレットを作るにあたって, 色々と作るツールがあります. 有名なところでは, WordとかAdobeあたりですかね. それはそれで便利ですが, 結構センスに左右されてクオリティが安定しないという難点があります(逆にクリエイティブな人にとってはかなり有用だと思います). 今回, このパンフに用いているのはそういったツールではなく, \LaTeX というものを用いています. 理系の大学生なら知っていると思いますが, 知らない人向けに簡単に説明したいと思います.
+
+		\LaTeX というのはwikiってもらえればわかりますが, 要するに数式などを綺麗に組版するためのシステムのことです. なので, 基本的には数式を出力することに特化しています. 例えばですが,
+		\[
+     	 	H_{F} = \hbar c \sum^{d-1} _{r=1} \int dk \ \omega(k) a_r(k)^{*} a_r(k)
+      	\]
+      	といった感じの数式が打てます. ちなみにこれは自由場のハミルトニアンです. わかる人にはわかる. 和記号や積分だけでなく, $ \hbar $ みたいな特殊文字もいけます(論文書くときにも使うので当たり前といえば当たり前ですが). どうやってこういう文字を打つかというと, \TeX にコマンドで命令してその命令に応じて記号やらなんやらを出力します. 例えば, 上の数式は
+
+		\verb|H_{F} = \hbar c \sum^{d-1} _{r=1} \int dk \ \omega(k) a_r(k)^{*} a_r(k) |
+
+		という命令で書かれています. 数式を作るだけでなく,このパンフのレイアウトから文字サイズ,
+		フォントに変更に至るまであらゆる部分をこのような命令で作っていくわけです. html知ってる人はそれに近いもんだとでも思ってください. ちなみに, このパンフではレイアウトはそこそこ,というか結構凝った命令で作っています.
+
+		こう見ると難しそうですが, 最近は割と簡単に\LaTeX を使うための環境が作れます. コマンドは調べていくうちに覚えるし何も難しいことはない! 最近ではWordでも数式機能が強化されたりしているようですが, 多分使い勝手の面では\TeX には及ばないし, 何より見た目が絶妙にダサくなります. 
+
+		と, 結構便利な\LaTeX なんですが, とにかく使いこなせる人が少ない! 京大生の過半数が理系なのに. そんなわけで熊野寮の(入退寮選考委員会では) \LaTeX を使える人材を募集しています. ぜひおいでください.
+		
+		\subsection{数式いろいろ}
+		他にもいろいろとできます. 
+		\[
+      	1+2+3+\dots = - \frac{1}{12}
+      	\]
+		とか, 
+		\[
+		\braket{}
+		\]
+		
+
+
+		\subsection{終わりに}
+		せっかくパンフに何か書くならもう少し面白い話にすればよかったかなと反省しています.
+
+
+		\rightline{(文: まつたけ)}
+
+	\section{元寮生の声 ---寮生活を振り返って}
+	 はじめに, 私は面白い文章も書けないし, 君は真面目枠だと言われたので, ただただ私の寮生活について書きます. 面白い話が聞きたい人は読み飛ばしてください.
+
+ 	私は2回生後期から途中入寮しました. きっかけは実家の門限が22時だったから. なぜ門限22時の家が熊野寮に入ることを許してくれたのかは永遠の謎ですが, 何はともあれめでたく入寮.
+
+	 門限から脱出したい一心で飛び込みましたが, 「熊野寮」と聞くと, 汚いんじゃないかな, 古そうだな, 4人部屋ってしんどいんじゃないかな, シャワーしかないの嫌だな, 友達できるかなとか, 不安ばっかりでした.
+
+ 	入ってみて, 期待を裏切らない部屋の汚さ. これは部屋によりますが, ボロボロの畳に薄汚れた絨毯, その上には足の踏み場がないほど散らばった住民の服の山. 部屋に入って始めにやったのは, 荷物を置く場所を作るために物をどかすこと. 入って5秒で入寮は早まったかな...と更に不安になりました. 1人でちょっとずつ掃除を始めるも数ヶ月もしたらそんな部屋での生活にも慣れました.
+
+ 	転機が訪れたのは部屋のメンバーが全員入れ替わった時. 新しくルームメイトになった方々が部屋をきれいにしたいと言ってくれたので, 畳を捨ててフローリングを敷いて誰のかわからない物を全部捨てて, 1日がかりの大掃除. おかげで人を呼べるほど綺麗な部屋に生まれ変わりました.
+
+ 	寮生活に不便や不満がなかったとは言えませんが, それを上回る楽しいことがたくさんありました. 歌ったり踊ったり, みんなでたこ焼きをしたり鍋をしたり, ゲームをしたり, 寮祭で騒いだり, 勉強を教えてもらったり, 朝まで飲んだり ... 一生でもう経験しないだろうなってことがたくさんできます. 帰ったら友達がいる, やりたいと思ったことが何でもできる, 誰かが一緒にやってくれる生活は, 社会人になるとできなくなるので, 学生時代に思いっきりやっててよかったなと思います.
+
+	まとめると, 熊野寮はいろんな人がいて, なんでもできるところです. 面白い話もたくさん聞けるし, 困ったら誰かが助けてくれます. 不安なことが多いと思いますが, 興味を持ったらぜひ! 覗きに行ってみてください.
+
+\rightline{(文: min)}
+
+
+    
 	\section{寮食と寮生活}
 
 	僕は寮食が大好きで, ほとんど毎食寮食を食べています(時には昼を二食食べてたりもするくらい). 「寮食」は一発で変換できる. 好きなメニューは天津飯(通称フリスビー). フリスビー状に硬めに焼かれた卵が肉厚感があっておいしいし, 上の餡も香ばしくてよい. 最近はだんだんふわふわになってきつつあって少し残念なところ.... そんな寮食大好きマンな僕が寮食について語ります.
@@ -1436,99 +1542,6 @@
 		来年は1位を目指します. 新入寮生の諸君も頑張ってくれたまえ.
 
 \rightline{(文:寮食クイズ2位)}
-
-
-	\section{$<陳謝>$ タイトル思いつきませんでした} %荒瀬のやつ
-	入寮パンフに何か書きたいなーってぼんやり思いつつ何もアクション起こさずにいたら「卒寮予定の立場からなんか書いてほしい」ってちょうど言われたので喜びいさんで書いてます. というわけで, 2019年3月で卒業(卒寮)予定の人です(頑張ってあと2単位取ります).
-
-	私は1回生の春からずっと住んでるんですが, 実を言うと, 最初はお金貯まったら引っ越して一人暮らししようと思ってました. だって, 入寮前にどんだけ熊野寮のこと調べても, 中核派の拠点とかここ入ったら留年するとかとにかく汚くて虫だらけとか常に学生服着たヤバい奴いるとか, そんな情報しか出てこないんですよ(当時は). とにかく下宿するお金もないししょうがないと, 不安に満ちあふれた心を抱いて渋々入寮したクチです. それがどうでしょう. 気づけばもう足かけ5年(結局留年した), 今では終わりゆく寮生活を心から惜しむほどの愛着が湧いてしまっています.
-
-	もちろん嫌なこともいっぱいあって, 何回も途中で「(もう無理退寮しよ)」って思いました. でもその都度私を思い留まらせてくれたのは, 寮で出会ったたくさんの大切な人たちと, 安すぎる生活コスト. 特に後者. 親のすねはもう痩せ細りすぎて齧るほど残っていなかったし, 私は労働というものを毛嫌いしていたので(バイトに溶かす時間があるなら, 本読んだり映画を観たり惰眠を貪ったりしたい). また前者について, ここでは語り尽くせないほどの密な人間関係を実践$ \cdot $ 観測しました. 400人超の男女その他交々が寄り集まって生活してればそりゃそうなる. 基本受身な私にも, ポップな話題からディープな議題まで語り合える大事な友達がいっぱいできました.
-
-	何か短くまとめようとしたのに長くなってしまった. とにかく, ある意味クセの強い空間で, 合わない人がいることは認めます. すぐ退寮しちゃう人も結構いるし. でもこの冗長な文章を読んでくれるくらい優しくて暇を持て余した人なら大丈夫だと思うので, 入寮予備軍のあなたは是非. 私を探し出して「パンフ読みました! 」って言ってくれたらご飯ぐらい奢りますよ. お金なかったら人違いですって言うけど.
-
-	\rightline{(文: Chageじゃないほう)}
-
-
-	\section{このパンフのあれこれ}
-
-		\subsection{はじめに}
-	みなさんこんにちは, このパンフの編集を担当している寮生です. 編集長は\pageref{page:座談会}ページの座談会で紹介されている通りインテリヤクザ君で, 実際に原稿を集めたり編集方針を決めてもらってますが, そんな編集長殿の命令でそれをこの形に書き起こしているのが私です. 修士課程の院生が一回生にこき使われるくらいこの寮では上下関係というものがないです. そんなわけでこのパンフ編集のとある裏話をしたいと思います.
-
-		\subsection{パンフの作り方}
-		こういうパンフレットを作るにあたって, 色々と作るツールがあります. 有名なところでは, WordとかAdobeあたりですかね. それはそれで便利ですが, 結構センスに左右されてクオリティが安定しないという難点があります(逆にクリエイティブな人にとってはかなり有用だと思います). 今回, このパンフに用いているのはそういったツールではなく, \LaTeX というものを用いています. 理系の大学生なら知っていると思いますが, 知らない人向けに簡単に説明したいと思います.
-
-		\LaTeX というのはwikiってもらえればわかりますが, 要するに数式などを綺麗に組版するためのシステムのことです. なので, 基本的には数式を出力することに特化しています. 例えばですが,
-		\[
-     	 	H_{F} = \hbar c \sum^{d-1} _{r=1} \int dk \ \omega(k) a_r(k)^{*} a_r(k)
-      		\]
-		こんな感じの数式が打てます. ちなみにこれは自由場のハミルトニアンです. わかる人にはわかる. 和記号や積分だけでなく, $ \hbar $ みたいな特殊文字もいけます(論文書くときにも使うので当たり前といえば当たり前ですが). どうやってこういう文字を打つかというと, \TeX にコマンドで命令してその命令に応じて記号やらなんやらを出力します. 例えば, 上の数式は
-
-		\verb|H_{F} = \hbar c \sum^{d-1} _{r=1} \int dk \ \omega(k) a_r(k)^{*} a_r(k) |
-
-		という命令で書かれています. 数式を作るだけでなく, このパンフのレイアウトから文字サイズ, フォントに変更に至るまであらゆる部分をこのような命令で作っていくわけです. html知ってる人はそれに近いもんだとでも思ってください. ちなみに, このパンフではレイアウトはそこそこ,というか結構凝った命令で作っています.
-
-		こう見ると難しそうですが, 最近は割と簡単に\LaTeX を使うための環境が作れます. コマンドは調べていくうちに覚えるし何も難しいことはない! 最近ではWordでも数式機能が強化されたりしているようですが, 多分使い勝手の面では\TeX には及ばないのではないと思ってます. 
-
-		と, 結構便利な\LaTeX なんですが, とにかく使いこなせる人が少ない! 京大生の過半数が理系なのに. そんなわけで熊野寮の(入退寮選考委員会では) \LaTeX を使える人材を募集しています. ぜひおいでください.
-
-
-		\subsection{終わりに}
-		せっかくパンフに何か書くならもう少し面白い話にすればよかったかなと反省しています.
-
-
-		\rightline{(文: まつたけ)}
-
-	\section{元寮生の声 ---寮生活を振り返って}
-	 はじめに, 私は面白い文章も書けないし, 君は真面目枠だと言われたので, ただただ私の寮生活について書きます. 面白い話が聞きたい人は読み飛ばしてください.
-
- 	私は2回生後期から途中入寮しました. きっかけは実家の門限が22時だったから. なぜ門限22時の家が熊野寮に入ることを許してくれたのかは永遠の謎ですが, 何はともあれめでたく入寮.
-
-	 門限から脱出したい一心で飛び込みましたが, 「熊野寮」と聞くと, 汚いんじゃないかな, 古そうだな, 4人部屋ってしんどいんじゃないかな, シャワーしかないの嫌だな, 友達できるかなとか, 不安ばっかりでした.
-
- 	入ってみて, 期待を裏切らない部屋の汚さ. これは部屋によりますが, ボロボロの畳に薄汚れた絨毯, その上には足の踏み場がないほど散らばった住民の服の山. 部屋に入って始めにやったのは, 荷物を置く場所を作るために物をどかすこと. 入って5秒で入寮は早まったかな...と更に不安になりました. 1人でちょっとずつ掃除を始めるも数ヶ月もしたらそんな部屋での生活にも慣れました.
-
- 	転機が訪れたのは部屋のメンバーが全員入れ替わった時. 新しくルームメイトになった方々が部屋をきれいにしたいと言ってくれたので, 畳を捨ててフローリングを敷いて誰のかわからない物を全部捨てて, 1日がかりの大掃除. おかげで人を呼べるほど綺麗な部屋に生まれ変わりました.
-
- 	寮生活に不便や不満がなかったとは言えませんが, それを上回る楽しいことがたくさんありました. 歌ったり踊ったり, みんなでたこ焼きをしたり鍋をしたり, ゲームをしたり, 寮祭で騒いだり, 勉強を教えてもらったり, 朝まで飲んだり ... 一生でもう経験しないだろうなってことがたくさんできます. 帰ったら友達がいる, やりたいと思ったことが何でもできる, 誰かが一緒にやってくれる生活は, 社会人になるとできなくなるので, 学生時代に思いっきりやっててよかったなと思います.
-
-	まとめると, 熊野寮はいろんな人がいて, なんでもできるところです. 面白い話もたくさん聞けるし, 困ったら誰かが助けてくれます. 不安なことが多いと思いますが, 興味を持ったらぜひ! 覗きに行ってみてください.
-
-\rightline{(文: min)}
-
-
-	\section{転学部$ < 並びに留年 \cdot 休学 > $ のすすめ}
-		\subsection{前書き}
-		こんな分厚いパンフをまじめに読んでくれている皆さんこんにちは. 私は今5回生です. 1月にこの原稿を書いていて, 3月には京大を退学して東京で就職しようと計画しています(今のところ) .
-
-		初めに本編と関係ないメッセージを伝えたいのですが, 私にとって熊野寮は本当に楽しく素晴らしい家であり, 遊び場でした. 先輩$ \cdot $ 友達$ \cdot $ 後輩$ \cdot $ その他, みんな仲良くしてくれて, とても沢山の人々を好きになりました(それよりかはめっちゃ少ないですけど, 嫌いになったりぶつかったりした人も多々) . ダンス$ \cdot $ ドラム$ \cdot $ 徹底討論$ \cdot $ ローション相撲など, 入寮してなければ一生できなかったかもしれないことを一杯やりました. この5年間で考え方や人格がかなり変わったと思うし, ここにいた時間のことを一生覚えていたいと思っています.
-
-		このパンフを手に取る人の多くは受験生の方だと思いますが, 合格したら是非入寮すべきですよ. 何ならもし落ちたとしても寮に入るために浪人する価値がありますよ. あなた方の先輩になる新2回生は近年稀にみる仲良し学年なので, 楽しく優しく新入生になる面倒を見てくれるはずです. (1回生じゃないあなたも安心してください. 年上ともフランクに仲良くしてくれるいい人たちです. ) %この段落削除すべき?(松本) %いいんじゃないかな. 知らんけど(松原)
-とにかく, まず見学に来てみてください. 私が案内できたらいいな.
-
-		\subsection{本編}
-		私が卒業を諦めた理由は複雑ですが, その大きな一つに「学科が合わなかった」というものがあります. 受験生の時って勉強に追われてるからそもそも進路について考える余裕が意外と無いし, 18の時点で天道を選べる人の方が少ないと思います. (自分は理系受験に決まった時点で, 総合人間学部や教育学部などの選択肢をなぜかシャットアウトしてました. 泣)
-
-		そこでおすすめなのが転学部です. 最初はみんな不満とかはないと思うんですけど, 専門が増えてきたら, なんかやりたいことと違うなぁ, となったとき... 京都大学には, 専攻を変えることのできる制度があります!
-
-		$\downarrow$詳しくはコチラ$\downarrow$
-
-		\url{https://www.gssc.kyoto-u.ac.jp/counsel/students.html}
-
-		簡単に言うと, 毎年10月$ \sim $ 1月くらいに書類出して面接受かったら学部や学科を変えられるという制度ですね. 入試の点数を照会して, 資格がある場合のみ出願できます. 受け付けてない学部もあります(例えば医学科は受け入れが無いし, 多くの学部では理転$ \cdot $ 文転は認めてないとか) . 大学思ったよりつまんないなーとか, なんか通うのツラいなーとかおもったら検討してみてください. 本部にはカウンセリングルームがあるので, 相談にも乗って貰えますよ. 自分のようにリタイアを選ぶ学生が減ることを願って! まだまだ学歴あった方がいいに決まってる社会なので! 卒業したかったな! ! !
-
-		\subsection{おまけ}
-		私は3留確定した末に多分退学するわけなんですけど, 結構長期にわたって深々と悩んでしまいました. 自称進学校と進学塾の管理教育に過剰適応しすぎて, 自由を与えられた途端全っ然使いこなせなくてめちゃくちゃになっちゃいました. そして今就活してますが, もちろん収入レベルは大卒より落ちそうですけど, 探せば楽しそうで暮らせそうな職がたくさんあることがわかりました. 最近は中退者$ \cdot $ 留年者向けの就職サービスも充実してきています.
-		\begin{itemize}
-		\item 留年しても死にません.
-		\item 卒業できなくても死にません.
-		\item 友達も親も, 意外と私を見捨てません.
-		\item 親戚だけはちょっとうるさい.
-		\end{itemize}
-		って感じなので, もしも頑張って合格した大学であんまりうまくいかなくても, 悲観せず, 悩み過ぎずに自分のペースで生きていきましょう. 今は特に参考にならないと思いますが, いつか必要になるかもしれない誰かに宛てて綴りました.
-        ようこそ京都大学へ, ようこそ熊野寮へ. あなたの大学生活と寮生活が, 喜びと彩りに溢れたものになりますように.
-
-\rightline{(mtmt)}
 
 	\section{B3どきどき$ \star$ ディアスポラ! }
 
