--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -798,7 +798,7 @@
 
 		そこでこの人権侵害的な状況を改善するため, 寮生側から大学に対し, 「食堂運営会」を設立し, その組織を寮生負担パート調理員の雇用主とすることを提案したのである. 取り決めとしては, 「人件費, 保険料は今までどおり寮生が払うこと」「大学側は労災時の補償責任を負うこと. また, 大学副学長は会長に就任すること」という形で, 大学と寮生が運営会雇用調理員の雇用責任を折半して負う形であった. この提案は認められ, 2005年4月から食堂運営会は発足し, 食堂運営会雇用調理員(元寮生負担パート) は労働保険に加入することができた. 確約によると, 寮生は食堂運営会雇用調理員(旧寮生負担パート) 2名の人件費$ \cdot $ 保険料を負担し, 大学側は労働災害発生時の補償責任を負うことになっている.
 
-		食堂運営会の今後の課題は, 食堂運営会雇用調理員さんの現在の労働条件を維持し, 働きやすい労働環境を守っていくことである. そのため, 日頃の調理員さんとのコミュニケーションはもちろん, 年2回開かれる食堂運営会総会や毎年の会長指名(会長の任期は１年です) , 副学長の代替わり毎に行なう団交$ \cdot $ 確約を確実にこなさなければならない. これよりもう一段階進んだ課題としては, 調理員さんに対する人件費$ \cdot $ 保険料支払いも含む完全な雇用責任を大学に認めさせ, 大学を雇用主にすること(つまり労働条件の「正常化」) がある.
+		食堂運営会の今後の課題は, 食堂運営会雇用調理員さんの現在の労働条件を維持し, 働きやすい労働環境を守っていくことである. そのため, 日頃の調理員さんとのコミュニケーションはもちろん, 年2回開かれる食堂運営会総会や毎年の会長指名(会長の任期は1年です) , 副学長の代替わり毎に行なう団交$ \cdot $ 確約を確実にこなさなければならない. これよりもう一段階進んだ課題としては, 調理員さんに対する人件費$ \cdot $ 保険料支払いも含む完全な雇用責任を大学に認めさせ, 大学を雇用主にすること(つまり労働条件の「正常化」) がある.
 
 		低価で生活できる学寮の意義を放棄し, 寮生の共同空間を破壊することで, 寮生間の自由なコミュニケーションを否定し, 個々人を分断管理(集団として行動できないように) するものであると同時に, 大学, 社会に対して批判的な者を恣意的に退寮させるなど, 経済的弱者を切り捨てた上での徹底管理を狙ったものであるとして全国の自治寮は長年これに抗議してきました.
 
@@ -1474,7 +1474,6 @@
 		と, 結構便利な\LaTeX なんですが, とにかく使いこなせる人が少ない! 京大生の過半数が理系なのに. そんなわけで熊野寮の(入退寮選考委員会では) \LaTeX を使える人材を募集しています. ぜひおいでください.
 
 		\subsection{数式いろいろ}
-<<<<<<< HEAD
 		他にもいろいろとできます.
 		\[
       	1+2+3+\dots = - \frac{1}{12}
@@ -1484,16 +1483,12 @@
 		\braket{}
 		\]
 
-
-
-=======
 		言いたいことは言ったので, ここからは怒涛のページ埋め作業です. いろんな数式を書きながらぼちぼち余ったページを埋めていきます.
 		\[
       	1+2+3+\dots = - \frac{1}{12}
       	\]
 		これはよくある有名な足し算ですね.「無限じゃないの!?」と思ったそこのあなた. まだまだ甘い. 世の中にはものすごく不可解なこともあるんです(この式について語るだけで1ページくらい簡単に埋まりそうですがやめときます).
 
->>>>>>> 1cb1adda0dee135ba151b959deb86182e06735f4
 		\subsection{終わりに}
 		せっかくパンフに何か書くならもう少し面白い話にすればよかったかなと反省しています.
 
@@ -1556,31 +1551,31 @@
 
     \section{てんと生活のすすめ}
 
-    自分はB棟一階に４年間住んでいるものです. 一階といえば, やっぱり気になるのがG.
+    自分はB棟一階に4年間住んでいるものです. 一階といえば, やっぱり気になるのがG.
     普通の家でもたまにお見かけしますが, この寮ほどの共存関係では無いでしょう.
     とはいえ入寮前にはだれもそんなことは知らない.
     自分だけは事故を起こさないと思い込む平均的運転者の如く, 私も自分の周りだけはGも寄り付かないのではないかという根拠のない自信と共に入寮しました. まあ滋賀から一時間半かけて通うか, Gとたまに挨拶する煩わしさを天秤にかけたなら, 当然の選択でした. なんとかなるやろ, と.
-    この寮を紹介してくれた先輩方は, 「そんなん見たことないで〜ハハン」や「部屋をきれいにしてれば大丈夫. 食べ物は外で食べること！」などと綺麗事を並べ立て, 若干１９歳の後輩を幻想で満たしたため私は特に疑いもせず入寮初日を迎えました.
+    この寮を紹介してくれた先輩方は, 「そんなん見たことないで〜ハハン」や「部屋をきれいにしてれば大丈夫. 食べ物は外で食べること!」などと綺麗事を並べ立て, 若干19歳の後輩を幻想で満たしたため私は特に疑いもせず入寮初日を迎えました.
 
-    自分だけかもしれませんが一回でもGを見たらその部屋では寝れません. これはこちら側の人間にとっては当然のことです. コモンセンスです. なので予防策を予算内で整えました. できうる最大の準備を！入寮初日に導入したのはホウ酸団子. 極悪非道な方法とはいえ, 快適な生活のためには仕方ない. さらに甘い香りでベタベタトラップに誘い込む小屋も多数建設しました. 最初から, 彼らを殲滅する作戦をとったのです. この部屋から出て行け！
+    自分だけかもしれませんが一回でもGを見たらその部屋では寝れません. これはこちら側の人間にとっては当然のことです. コモンセンスです. なので予防策を予算内で整えました. できうる最大の準備を!入寮初日に導入したのはホウ酸団子. 極悪非道な方法とはいえ, 快適な生活のためには仕方ない. さらに甘い香りでベタベタトラップに誘い込む小屋も多数建設しました. 最初から, 彼らを殲滅する作戦をとったのです. この部屋から出て行け!
 
-    作戦が功を奏したのか, 入寮から一週間が経っても黒い影は見えません. やはり先輩の意見は正しかったと思いました. いつものように二段ベッドの下段に入り, いい夢を見ていると足元に違和感を感じました. 起きて電気をつけるとまさに私の膝下に彼が仁王立ちしているではありませんか. 戦慄した私はベッドから文字通り飛び降り, 同部屋で寝ていた後輩を叩き起こし, 助けを求めました. 彼は慣れた様子でスリッパをとり「どこですか」と答えてくれました. 寝ぼけた頼りない様子ではあるものの, 戦力は戦力なので味方を得た私は奴が隠れている場所を的確に伝えました. 後輩は電気をつけ, その場所を探し始めました. その瞬間, 奴は物凄いスピードで戸棚の奥深く消え, 捕捉不可能となってしまいました. 「戸棚の裏か？！」その場所を凝視する私を尻目に後輩はあろうことかベッドに戻っていきました. 「危機は去ったということで. おやすみなさい」「え？」
+    作戦が功を奏したのか, 入寮から一週間が経っても黒い影は見えません. やはり先輩の意見は正しかったと思いました. いつものように二段ベッドの下段に入り, いい夢を見ていると足元に違和感を感じました. 起きて電気をつけるとまさに私の膝下に彼が仁王立ちしているではありませんか. 戦慄した私はベッドから文字通り飛び降り, 同部屋で寝ていた後輩を叩き起こし, 助けを求めました. 彼は慣れた様子でスリッパをとり「どこですか」と答えてくれました. 寝ぼけた頼りない様子ではあるものの, 戦力は戦力なので味方を得た私は奴が隠れている場所を的確に伝えました. 後輩は電気をつけ, その場所を探し始めました. その瞬間, 奴は物凄いスピードで戸棚の奥深く消え, 捕捉不可能となってしまいました. 「戸棚の裏か? !」その場所を凝視する私を尻目に後輩はあろうことかベッドに戻っていきました. 「危機は去ったということで. おやすみなさい」「え? 」
 
     ありえない. この瞬間に私は悟りました. この寮に住んでいる奴らはおかしい. ネジがはずれているとはこのことだと思いました.
 
     そんな部屋では寝れません. 談話室のソファで夜を超すことにした私は, この事件について分析を深めていました. 「もしやホイホイが隣の部屋からもホイホイしたのかもしれない. 」「その上でこれからはどうすればいいんだ. 滋賀に帰ろうか」そうして絶望しているうちに, その日は眠ることができました.
 
-    次の日, 本格的に寮生諸君にこの問題についてヒアリングを行ってみると, おかしいのは私でした. 「そんなものは全ての家屋に存在する. あきらめて共生するんだな」「君は昨日ベッドで襲われたかもしれないけれど, そんな話は聞いたことがない. アンラッキーなんじゃない？」「私は本当に一回もみたことがないよ. 部屋掃除すれば？？」「だからといって君, ５万払って下宿すんの？」みんな, どこかで折り合いをつけて生きていました. まさに二重思考の使い手になるしか現代を生きる道はないのか.
+    次の日, 本格的に寮生諸君にこの問題についてヒアリングを行ってみると, おかしいのは私でした. 「そんなものは全ての家屋に存在する. あきらめて共生するんだな」「君は昨日ベッドで襲われたかもしれないけれど, そんな話は聞いたことがない. アンラッキーなんじゃない? 」「私は本当に一回もみたことがないよ. 部屋掃除すれば? ? 」「だからといって君, 5万払って下宿すんの? 」みんな, どこかで折り合いをつけて生きていました. まさに二重思考の使い手になるしか現代を生きる道はないのか.
 
     ......
 
-    あきらめないで！
+    あきらめないで!
 
-    そこで私が購入したのがこの一人用テント！ア○ゾンで３０００円もしない安物だが, それで十分. 部屋の中で使うなら４年３６５日の使用に耐えうるこの一品！
+    そこで私が購入したのがこの一人用テント!ア*ゾンで3,000円もしない安物だが, それで十分. 部屋の中で使うなら4年365日の使用に耐えうるこの一品!
 
-    私は二段ベッドの下段で寝ていたため, テントを張るためのロープも外枠に括りつつけることができ, バシッとテントを布団の上に設営できました. そしてその中には枕と寝袋！これで完璧なんです. 自分の体を完全に包み込まれた私は, 自分だけの空間を手にしたのです！！
+    私は二段ベッドの下段で寝ていたため, テントを張るためのロープも外枠に括りつつけることができ, バシッとテントを布団の上に設営できました. そしてその中には枕と寝袋!これで完璧なんです. 自分の体を完全に包み込まれた私は, 自分だけの空間を手にしたのです!!
 
-    窮屈なんじゃないの？と思っているあなた！そんなことはあります. だがそれがなんだ！四年間このテントで生活した私は, 寝返りゼロで寝る能力を手に入れました. まさに直立不動の姿勢で寝れるわたし. これがソリューション！レッツ熊野寮！
+    窮屈なんじゃないの? と思っているあなた!そんなことはあります. だがそれがなんだ!四年間このテントで生活した私は, 寝返りゼロで寝る能力を手に入れました. まさに直立不動の姿勢で寝れるわたし. これがソリューション!レッツ熊野寮!
 
     \rightline{(文: ikm)}
 
@@ -1596,7 +1591,7 @@
         我大概真的不擅长写文章，或是``爱得太深''，看了上面语文能力正常的人应该是一头雾水. 但是住在这里的人以及这里的人的文化着实是我希望更多人来接触的.
 
         \subsection{排他}
-        大一新生都会去参加各种社团的新生欢迎会. 我当时其中一个去了MS部的新欢，因为在农学部XXXXX看起来真的太浪漫了. 那天白天是CM体验，晚上是跟前辈吃一起在PMC边上的部活房子里吃烧烤的交流会. 我从白天一直参加到了晚上. 前辈们对后辈们都很亲切耐心，边吃边聊了很久，我也聊了很多听到了很多. 太阳落山到大家快看不见互相的脸的时候，一个前辈问了我一句，你的性质是留学生？还是普通的学生？我理所当然地说我是留学生. 接着前辈突然露出有点歉意的微笑说：其实. . . 我们不收留学生. 我一时懵了不知道从哪里质疑起，选了比较指向核心的``为什么不收留学生？''这个问题问了回去，前辈和周围的前辈互相都露出了尴尬的笑容，说：``我们从来不收，我们有这样的规定，很抱歉. ''就像是在对来推销报纸的人说：``我们定了其他家的报纸了，抱歉. ''一样自然又正派. 我记得当时的我感到了失望和愤怒，以及远远盖过前两者的巨大的震惊. 因为当时的我无法理解拥有可以解出高难度的国语，社会，数学，物理等等多分野的题目的聪明头脑的人，聚集在一起，挺着胸脯对着面前的人做出了无法说出根据的排挤行为，为何没有人表现得对自己的行为有一丝反感和迟疑，哪怕是思考过的痕迹.
+        大一新生都会去参加各种社团的新生欢迎会. 我当时其中一个去了MS部的新欢，因为在农学部XXXXX看起来真的太浪漫了. 那天白天是CM体验，晚上是跟前辈吃一起在PMC边上的部活房子里吃烧烤的交流会. 我从白天一直参加到了晚上. 前辈们对后辈们都很亲切耐心，边吃边聊了很久，我也聊了很多听到了很多. 太阳落山到大家快看不见互相的脸的时候，一个前辈问了我一句，你的性质是留学生? 还是普通的学生? 我理所当然地说我是留学生. 接着前辈突然露出有点歉意的微笑说：其实. . . 我们不收留学生. 我一时懵了不知道从哪里质疑起，选了比较指向核心的``为什么不收留学生? ''这个问题问了回去，前辈和周围的前辈互相都露出了尴尬的笑容，说：``我们从来不收，我们有这样的规定，很抱歉. ''就像是在对来推销报纸的人说：``我们定了其他家的报纸了，抱歉. ''一样自然又正派. 我记得当时的我感到了失望和愤怒，以及远远盖过前两者的巨大的震惊. 因为当时的我无法理解拥有可以解出高难度的国语，社会，数学，物理等等多分野的题目的聪明头脑的人，聚集在一起，挺着胸脯对着面前的人做出了无法说出根据的排挤行为，为何没有人表现得对自己的行为有一丝反感和迟疑，哪怕是思考过的痕迹.
 
         如果这是朋友圈的煽动性的厕所读物那么接下来跟着的句子会是``日本人就是如此排挤中国人''，但是现在我并不想申诉我遭到了``排挤''，因为在日本的纵向服从的社会环境下，在为了普及纵向服从而诞生的``部活''里，存在不允许质疑的不合理的规定，排除外来的思考方式，集体里的人主动回避质疑和思考，是再合理不过的事情了. （同理，独裁状态下的国家成长起来的我，一定更是如此. ）
 
@@ -1665,7 +1660,7 @@
 
 
 
-	\section{熊野寮で始める１カ月5万円生活}
+	\section{熊野寮で始める1カ月5万円生活}
 	人によって経済事情は様々である. こればかりは様々であるとしか言い様がなく, しかし様々であることに気づくことも, 大学生になって得る知識の一つである. 例えばひと月に5万円で生活することになった場合を考えてみよう. 日本学生支援機構が実施している第一種奨学金の貸与月額は, 最高額が51,000円である. 普通に下宿をすると, そんなものは家賃や水光熱費で軽く溶けてしまう.
 
 	しかし熊野寮であれば, 約5万円で生活をすることが可能になる. どのような出費が考えられるか見てみよう.
