--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -1452,41 +1452,30 @@
 
 	\section{このパンフのあれこれ}
 
-		\subsection{はじめに}
-	みなさんこんにちは, このパンフの編集を担当している寮生です. 編集長は\pageref{page:座談会}ページの座談会で紹介されている通りインテリヤクザ君で, 実際に原稿を集めたり編集方針を決めてもらってますが, そんな編集長殿の命令でそれをこの形に書き起こしているのが私です. さながら舎弟みたいな感じですね.  修士課程の院生が一回生に舎弟としてこき使われるくらいこの寮では上下関係というものがないです. それがいいところでもあるんだけど.  そんなわけでこのパンフ編集のとある裏話をしたいと思います.
+      \subsection{はじめに}
+	     みなさんこんにちは, このパンフの編集を担当している寮生です. 編集長は\pageref{page:座談会}ページの座談会で紹介されている通りインテリヤクザ君で, 実際に原稿を集めたり編集方針を決めてもらってますが, そんな編集長殿の命令でそれをこの形に書き起こしているのが私です. さながら舎弟みたいな感じですね.  修士課程の院生が一回生に舎弟としてこき使われるくらいこの寮では上下関係というものがないです. それがいいところでもあるんだけど.  そんなわけでこのパンフ編集のとある裏話をしたいと思います.
 
-		\subsection{パンフの作り方}
-		こういうパンフレットを作るにあたって, 色々と作るツールがあります. 有名なところでは, WordとかAdobeあたりですかね. それはそれで便利ですが, 結構センスに左右されてクオリティが安定しないという難点があります(逆にクリエイティブな人にとってはかなり有用だと思います). 今回, このパンフに用いているのはそういったツールではなく, \LaTeX というものを用いています. 理系の大学生なら知っていると思いますが, 知らない人向けに簡単に説明したいと思います.
+     \subsection{パンフの作り方}
+		   こういうパンフレットを作るにあたって, 色々と作るツールがあります. 有名なところでは, WordとかAdobeあたりですかね. それはそれで便利ですが, 結構センスに左右されてクオリティが安定しないという難点があります(逆にクリエイティブな人にとってはかなり有用だと思います). 今回, このパンフに用いているのはそういったツールではなく, \LaTeX というものを用いています. 理系の大学生なら知っていると思いますが, 知らない人向けに簡単に説明したいと思います.
 
-		\LaTeX というのはwikiってもらえればわかりますが, 要するに数式などを綺麗に組版するためのシステムのことです. なので, 基本的には数式を出力することに特化しています. 例えばですが,
-		\[
-     	 	H_{F} = \hbar c \sum^{d-1} _{r=1} \int dk \ \omega(k) a_r(k)^{*} a_r(k)
-      	\]
-      	といった感じの数式が打てます. ちなみにこれは自由場のハミルトニアンです. わかる人にはわかる. 和記号や積分だけでなく, $ \hbar $ みたいな特殊文字もいけます(論文書くときにも使うので当たり前といえば当たり前ですが). どうやってこういう文字を打つかというと, \TeX にコマンドで命令してその命令に応じて記号やらなんやらを出力します. 例えば, 上の数式は
+       \LaTeX というのはwikiってもらえればわかりますが, 要するに数式などを綺麗に組版するためのシステムのことです. なので, 基本的には数式を出力することに特化しています. 例えばですが,
+       \[
+ 	 	   H_{F} = \hbar c \sum^{d-1} _{r=1} \int dk \ \omega(k) a_r(k)^{*} a_r(k)
+       \]
+       といった感じの数式が打てます. ちなみにこれは自由場のハミルトニアンです. わかる人にはわかる. 和記号や積分だけでなく, 換算プランク定数$ \hbar $ みたいな特殊文字もいけます(論文書くときにも使うので当たり前といえば当たり前ですが). どうやってこういう文字を打つかというと, \TeX にコマンドで命令してその命令に応じて記号やらなんやらを出力します. 例えば, 上の数式は
 
-		\verb|H_{F} = \hbar c \sum^{d-1} _{r=1} \int dk \ \omega(k) a_r(k)^{*} a_r(k) |
-
-		という命令で書かれています. 数式を作るだけでなく,このパンフのレイアウトから文字サイズ,
-		フォントに変更に至るまであらゆる部分をこのような命令で作っていくわけです. html知ってる人はそれに近いもんだとでも思ってください. ちなみに, このパンフではレイアウトはそこそこ,というか結構凝った部類になると思います(当社比).
+       \verb|H_{F} = \hbar c \sum^{d-1} _{r=1} \int dk \ \omega(k) a_r(k)^{*} a_r(k) |
+       という命令で書かれています. 数式を作るだけでなく,このパンフのレイアウトから文字サイズ,フォントに変更に至るまであらゆる部分をこのような命令で作っていくわけです. html知ってる人はそれに近いもんだとでも思ってください. ちなみに, このパンフではレイアウトはそこそこ,というか結構凝った部類になると思います(当社比).
 
 		こう見ると難しそうですが, 最近は割と簡単に\LaTeX を使うための環境が作れます. コマンドは調べていくうちに覚えるし何も難しいことはない! 最近ではWordでも数式機能が強化されたりしているようですが, 多分使い勝手の面では\TeX には及ばないし, 何より見た目が絶妙にダサくなります.
 
 		と, 結構便利な\LaTeX なんですが, とにかく使いこなせる人が少ない! 京大生の過半数が理系なのに. そんなわけで熊野寮の(入退寮選考委員会では) \LaTeX を使える人材を募集しています. ぜひおいでください.
 
 		\subsection{数式いろいろ}
-		他にもいろいろとできます.
-		\[
-      	1+2+3+\dots = - \frac{1}{12}
-      	\]
-		とか,
-		\[
-		\braket{}
-		\]
-
 		言いたいことは言ったので, ここからは怒涛のページ埋め作業です. いろんな数式を書きながらぼちぼち余ったページを埋めていきます.
 		\[
       	1+2+3+\dots = - \frac{1}{12}
-      	\]
+    \]
 		これはよくある有名な足し算ですね.「無限じゃないの!?」と思ったそこのあなた. まだまだ甘い. 世の中にはものすごく不可解なこともあるんです(この式について語るだけで1ページくらい簡単に埋まりそうですがやめときます).
 
 		\subsection{終わりに}
@@ -1512,7 +1501,25 @@
 
 \rightline{(文: min)}
 
+\newpage
 
+  \section{写給寮外的中国人}
+  %「给」は出力できず. 中文対応するほどの能力と忍耐力は私はなかった
+\foreignlanguage{schinese}{给}
+\begin{figure}[h]
+		\begin{center}
+ 	 	\includegraphics[scale=0.85]{voice.pdf}
+  \end{center}
+		\end{figure}
+
+\newpage
+\begin{figure}[h]
+		\begin{center}
+ 	 	\includegraphics[scale=0.85]{voice_2.pdf}
+  \end{center}
+		\end{figure}
+
+    \rightline{(文:さわ)}
 
 	\section{寮食と寮生活}
 
@@ -1577,32 +1584,8 @@
 
     窮屈なんじゃないの? と思っているあなた!そんなことはあります. だがそれがなんだ!四年間このテントで生活した私は, 寝返りゼロで寝る能力を手に入れました. まさに直立不動の姿勢で寝れるわたし. これがソリューション!レッツ熊野寮!
 
-    \rightline{(文: ikm)}
+    \rightline{(文:マリファナは中毒性がない)}
 
-    \section{ある留学生の雑記}
-
-        \subsection{宣传册}
-        拿到宣传手册或是在官网阅览熊野寮宣传册电子版的来自中国的朋友，你好. 我是住在熊野寮的中国人. 从学部生1年级到5年级，住了整整5年，女生.
-
-        为了让每一个看到这篇文章的人能变得哪怕有一点点想住进这个混乱的自治寮，多传达一点点我对这个寮的生活的百般感受，我想这个稿子怎么写，想了一个月. 我拖稿，拖到别说截止日期，甚至所有的校阅排版都定稿完成，我自己都以为我是默认撤稿了. 可我今天刚好忙完了所有毕业相关的东西，回到寮的食堂，对正在吃寮食的宣传册负责人说：``好遗憾之前没能写成稿子·……'' ，负责人竟说，没问题，帮你加进去. ''
-
-        不知道为什么我就把刚刚发生的这个场景像这样写了进来. 我想介绍这个宿舍的任何一个性质任何一个文化习惯任何一个有趣的企划活动任何一个我喜欢的或者让我困扰的人或事，就比如上面这件平凡的小事，负责人是个自恋的帅哥，寮的宣传册虽然有截止日期但是只要运营的人有热情，写稿的我还有热情，我们就把稿子加上去，因为我们是【自治】的，寮里的任何事的主体都是我们. 并且我被邀请用中文写这篇``寮生的声音''，因为这个寮欢迎外国人，并且比日本的任何一个表面写着欢迎外国人的团体都要主体的，自发地欢迎外国人. 因为我们是【自治】的.
-
-        我大概真的不擅长写文章，或是``爱得太深''，看了上面语文能力正常的人应该是一头雾水. 但是住在这里的人以及这里的人的文化着实是我希望更多人来接触的.
-
-        \subsection{排他}
-        大一新生都会去参加各种社团的新生欢迎会. 我当时其中一个去了MS部的新欢，因为在农学部XXXXX看起来真的太浪漫了. 那天白天是CM体验，晚上是跟前辈吃一起在PMC边上的部活房子里吃烧烤的交流会. 我从白天一直参加到了晚上. 前辈们对后辈们都很亲切耐心，边吃边聊了很久，我也聊了很多听到了很多. 太阳落山到大家快看不见互相的脸的时候，一个前辈问了我一句，你的性质是留学生? 还是普通的学生? 我理所当然地说我是留学生. 接着前辈突然露出有点歉意的微笑说：其实. . . 我们不收留学生. 我一时懵了不知道从哪里质疑起，选了比较指向核心的``为什么不收留学生? ''这个问题问了回去，前辈和周围的前辈互相都露出了尴尬的笑容，说：``我们从来不收，我们有这样的规定，很抱歉. ''就像是在对来推销报纸的人说：``我们定了其他家的报纸了，抱歉. ''一样自然又正派. 我记得当时的我感到了失望和愤怒，以及远远盖过前两者的巨大的震惊. 因为当时的我无法理解拥有可以解出高难度的国语，社会，数学，物理等等多分野的题目的聪明头脑的人，聚集在一起，挺着胸脯对着面前的人做出了无法说出根据的排挤行为，为何没有人表现得对自己的行为有一丝反感和迟疑，哪怕是思考过的痕迹.
-
-        如果这是朋友圈的煽动性的厕所读物那么接下来跟着的句子会是``日本人就是如此排挤中国人''，但是现在我并不想申诉我遭到了``排挤''，因为在日本的纵向服从的社会环境下，在为了普及纵向服从而诞生的``部活''里，存在不允许质疑的不合理的规定，排除外来的思考方式，集体里的人主动回避质疑和思考，是再合理不过的事情了. （同理，独裁状态下的国家成长起来的我，一定更是如此. ）
-
-        这样看来，熊野寮是一个能够自我反省的非常异类的团体.
-        从我刚住进寮里，到去年年底为止，入寮说明要项上都有一项选考标准，那就是外国人必须有一定的日语水平才能入住. 这条规定想过去十分合理. 我很长一段时间也对这个规定没有感到任何不妥. 因为熊野寮里最最最根本的原则，是寮里的任何事宜都是通过寮生之间的交流讨论做出决定的. 那么语言不通的外国人，自然没有办法参与到寮内的各种会议之中，也无法对寮内的交流做出贡献，收留他们对寮的运营是没有任何好处的. 就好比文化上没有习得对前辈绝对的纵向服从的留学生，对于MC部是不合理的需要被排除的是一样的道理. 如果熊野寮是一个为了运营管理而运营管理的团体,那么【拥有一定的日语能力】这一项选考标准永远都不会迎来被删除的这一天. 那么我也说不定就是那个对没有日语能力的留学生解释说``因为我们有这样的规定''的人，并且还一边读着厕所文学一边也申诉自己曾经遭受过的排挤. 庆幸经过寮生不屑努力的讨论，尝试，和准备工作，熊野寮删除了【拥有一定的日语能力】这样一项意味着``排挤''的选考标准. 我们思考了我们的排除对于被排除的人来说意味着什么，对我们来说意味着什么，思考了我们应该去追求的是什么样的原则. 因为我们是【自治】的. 因为每一个人心里其实都有质疑自己的行为的契机和发现，自治的环境给了我们每个人说出自己的质疑并且去改变的自由，所以熊野寮在我看来是在不断变化不断成长的. 当然这几年来的变化中不光有成长，也有在我心里算成是倒退的变化. 这也大概只能无奈地归结于因为我们是【自治】的了.
-        \subsection{我}
-        我在熊野寮住了5年. 第一年受着前辈的爱护和照顾，拼命在寮里组乐队，尽情地玩了自己想玩的东西. 第二年第三年我开始担起了寮的自治运营的一些职位. 第四年第五年我有点累了，遇到了人生的瓶颈一样的时期，对待寮里的工作和生活都很懒散. 在这个寮里有时候我觉得自己很多方面跟别人的成长环境不同，所以很难很好地去理解体谅周围的人，但是更多时候我感受到的是每一个人都是独特的人，在这里每一个独特的人的意见和人格都是受到平等的尊重的（也或许还未到这种理想的状态，只不过是很多寮生希望是这样的）. 我觉得这是理所应该的，又是十分珍贵的事情. 我不知道我写的这篇文章有没有一点看上去像宗教煽动的感觉. 但是我确实是希望有更多人的来了解这个寮了解在日本已经濒临灭绝的学生自治的珍贵的文化.
-
-        谢谢你读完这篇文章，如果你有一点点对熊野寮感兴趣了，不妨住进去试试. 祝你有一个丰富的难忘的大学生活.
-
-      \rightline{(sawa)}
 
 
 	\section{B3どきどき$ \star$ ディアスポラ! }
@@ -1730,7 +1713,6 @@
 		\emph{注) 以下の話は架空の話です. 実在するいかなる組織$ \cdot $ 団体$ \cdot $ 人物に一切の関係がない...わけがないですが, 誰かを貶める意図はありません. }
 
 		20XX年M月N日(金)午後9時, 熊野寮食堂で「昼の寮食\footnote{\ref{subsec:data}(基本データ)や\ref{sec:cafeteria}(寮食堂と寮生)などを参照. 昼の寮食に週一でカレーライスまたはハヤシライスが出るというのは事実. また, 熊野寮食堂は会議などを行う多目的スペースでもある. }のメニューに出されるカレーライスとハヤシライスの頻度$ \cdot $ 比率の決定」という議論が行われようとしていた.
-%\footnote{熊野寮の寮食堂で出されるご飯のこと. 大学の授業がある期間の平日に朝$ \cdot $ 昼$ \cdot $ 夕の3食作られる. 昼$ \cdot $ 夜の寮食のメニューは毎日基本的にそれぞれ1種類で, メニューの選択はできない. しかし, メニューは日替わりなので, 寮食を毎日食べることで様々なメニューを楽しめ, かつ栄養バランスの良い食生活をおくることができる. 一食当たり朝180円, 昼290円, 夕食420円で, 大抵の成人男性の腹を満たすくらいの量が出てくる. 寮の一か月の維持費4100円とは別払い. 昼の寮食に週一でカレーライスまたはハヤシライスが出るというのは事実. また, 熊野寮食堂は会議などを行う多目的スペースでもある. }
 
 		この日は年2回の寮生大会の日である. 寮生大会は熊野寮の最高意思決定機関であるので, 寮の重要な方針の決定もしばしば行われる. しかし, 今回の寮生大会で出された議題は上記の凡庸極まりない議題ただ一つであった.
 
