寮生の声(松原)差し替え
差し替えました

--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -1450,37 +1450,75 @@
 	\rightline{(文: Chageじゃないほう)}
 
 
-	\section{このパンフのあれこれ}
 
-      \subsection{はじめに}
-	     みなさんこんにちは, このパンフの編集を担当している寮生です. 編集長は\pageref{page:座談会}ページの座談会で紹介されている通りインテリヤクザ君で, 実際に原稿を集めたり編集方針を決めてもらってますが, そんな編集長殿の命令でそれをこの形に書き起こしているのが私です. さながら舎弟みたいな感じですね.  修士課程の院生が一回生に舎弟としてこき使われるくらいこの寮では上下関係というものがないです. それがいいところでもあるんだけど.  そんなわけでこのパンフ編集のとある裏話をしたいと思います.
+  \section{シュレーディンガーの猫救出作戦ノ記録}
 
-     \subsection{パンフの作り方}
-		   こういうパンフレットを作るにあたって, 色々と作るツールがあります. 有名なところでは, WordとかAdobeあたりですかね. それはそれで便利ですが, 結構センスに左右されてクオリティが安定しないという難点があります(逆にクリエイティブな人にとってはかなり有用だと思います). 今回, このパンフに用いているのはそういったツールではなく, \LaTeX というものを用いています. 理系の大学生なら知っていると思いますが, 知らない人向けに簡単に説明したいと思います.
+  みなさんこんにちは. ここではせっかく \LaTeX を使っているので数式で何かやってみようと思って, なんかシュレーディンガーの猫にまつわる諸々を書いてみようと思います.
 
-       \LaTeX というのはwikiってもらえればわかりますが, 要するに数式などを綺麗に組版するためのシステムのことです. なので, 基本的には数式を出力することに特化しています. 例えばですが,
-       \[
- 	 	   H_{F} = \hbar c \sum^{d-1} _{r=1} \int dk \ \omega(k) a_r(k)^{*} a_r(k)
-       \]
-       といった感じの数式が打てます. ちなみにこれは自由場のハミルトニアンです. わかる人にはわかる. 和記号や積分だけでなく, 換算プランク定数$ \hbar $ みたいな特殊文字もいけます(論文書くときにも使うので当たり前といえば当たり前ですが). どうやってこういう文字を打つかというと, \TeX にコマンドで命令してその命令に応じて記号やらなんやらを出力します. 例えば, 上の数式は
+    \subsection{シュレーディンガーの猫}
+    シュレーディンガーの猫について聞いたことくらいはあると思います. 簡単に説明すると, 箱の中に猫と放射性元素, 毒ガスを放出できる放射線検知器を入れておきます. 箱の中見えません. 一定時間経過後, 箱の中では確率$ 1/2 $ で放射性元素は崩壊し, 放射線を出します. このとき, 検知器が作動し毒ガスが箱の中に充満し猫は残念なことにその生涯を終えることになります. しかし, 箱の中が見えないのでフタを開けるまでは猫の生死はわかりません. このとき, 猫は生きている状態と死んでいる状態の両方の状態にある, と説明されます. この猫のことをシュレーディンガーの猫と言います. そんなアホなと思うかもしれませんが, 量子論と呼ばれる物理学の分野ではこれが成立します. ちなみに箱を開けるときは換気を十分にするか防毒マスクをつけないと自分も巻き添えになりうるのでお気をつけください.
 
-       \verb|H_{F} = \hbar c \sum^{d-1} _{r=1} \int dk \ \omega(k) a_r(k)^{*} a_r(k) |
-       という命令で書かれています. 数式を作るだけでなく,このパンフのレイアウトから文字サイズ,フォントに変更に至るまであらゆる部分をこのような命令で作っていくわけです. html知ってる人はそれに近いもんだとでも思ってください. ちなみに, このパンフではレイアウトはそこそこ,というか結構凝った部類になると思います(当社比).
+    さて, 誰が好きで猫をこんな酷い目に合わせようと思うでしょうか. ちなみに私自身は猫アレルギーなので別に絶滅してもらっても構わないとは思いますが, そう思う人はきっと少数派なのでここは多数派に従って量子力学的に猫を救出する方法を考察してみます. その上で猫は可愛い.
 
-		こう見ると難しそうですが, 最近は割と簡単に\LaTeX を使うための環境が作れます. コマンドは調べていくうちに覚えるし何も難しいことはない! 最近ではWordでも数式機能が強化されたりしているようですが, 多分使い勝手の面では\TeX には及ばないし, 何より見た目が絶妙にダサくなります.
-
-		と, 結構便利な\LaTeX なんですが, とにかく使いこなせる人が少ない! 京大生の過半数が理系なのに. そんなわけで熊野寮の(入退寮選考委員会では) \LaTeX を使える人材を募集しています. ぜひおいでください.
-
-		\subsection{数式いろいろ}
-		言いたいことは言ったので, ここからは怒涛のページ埋め作業です. いろんな数式を書きながらぼちぼち余ったページを埋めていきます.
-		\[
-      	1+2+3+\dots = - \frac{1}{12}
+    \subsection{生きてもいて死んでもいる状態}
+    とりあえず生きてもいて死んでいる状態, というのを定式化します. 生きている状態を数式で$ \ket{\mathrm{alive}} $ , 死んでいる状態を$ \ket{\mathrm{dead}} $ と表します. 猫の生死はそれぞれ確率 $1/2 $ であるので, 猫の状態$ \ket{\psi} $ というのは
+    \[
+    \ket{\psi} := \frac{1}{\sqrt{2}}( \ket{\mathrm{alive}}  + \ket{\mathrm{dead}} )
     \]
-		これはよくある有名な足し算ですね.「無限じゃないの!?」と思ったそこのあなた. まだまだ甘い. 世の中にはものすごく不可解なこともあるんです(この式について語るだけで1ページくらい簡単に埋まりそうですがやめときます).
+    と書けます. この$ \ket{\cdot} $ という記号は\textbf{ケット} と呼ばれる記号です. よくわからない人はベクトルのお化けみたいなもんだと思ってください. このベクトルのノルム(大きさ)を
+    \[
+    \| \psi \|^2 := \braket{\psi | \psi}
+    \]
+    で定義します. $ \bra{\cdot} $ は\textbf{ブラ}といいます. また, 状態を表すベクトルは大きさが1であること, つまり$ \|\mathrm{alive}\| = \braket{\mathrm{alive}|\mathrm{alive} } = 1 $ を要求します. 死亡状態dead も同様のことが成り立ちます. 同時に成り立たない状態は実現しないので, $ \braket{\mathrm{alive}|\mathrm{dead} } = \braket{\mathrm{dead}|\mathrm{alive} }  =0$ が成り立ちます. 以上の計算法則を用いて, 生きている確率と死んでいる確率はどちらも
+    \[
+    | \braket{\psi | \mathrm{alive} } | ^2 = | \braket{\psi | \mathrm{dead} } |^2= \frac{1}{2}
+    \]
+    と計算できるので, この定式化はどうやら正しそうな気がします. これを用いると, $ \braket{\psi | \psi} = 1 $ もわかります. 何が何だかさっぱりですね. まぁとりあえず猫の状態はがなんとか定式化できたとだけ認識してもらえばいいんじゃないでしょうかね.
 
-		\subsection{終わりに}
-		せっかくパンフに何か書くならもう少し面白い話にすればよかったかなと反省しています.
+    要するにとりあえず猫はこのままでは殺されてしまいます. ここから救出の算段を立てます.
 
+    \subsection{時間を止める魔法}
+    量子論には時間を止める方法が存在します. \textbf{量子Zeno効果}と呼ばれる現象を用います. Zeno効果の由来はZeno(ゼノン)のパラドックスですね, 「飛んでる矢は止まってる」とか「見つめてる鍋は煮立たない」とかそういうやつです. 量子Zeno効果とは「連続測定されている量子系は時間発展しない」現象です. 見つめられると動けなくなるわけです. 語彙力の足りないラブソングみたいなもんです.
+
+    これを定式化します. 簡単に説明するのは不可能なので, よくわからんって人は諦めて次節まで読み飛ばしてください.
+
+    \subsubsection{射影測定によるZeno効果の定式化}
+    $ \mathscr{H} $ をヒルベルト空間とし, $ \psi (t) \in \mathscr{H} $ とする. 系の初期状態を$ \psi_{0} := \psi (0)  $とします. $H$ を$ \mathscr{H} $ 上に作用するハミルトニアンとします. このとき, 系の時間発展は$ \psi (t) = e^{-iHt}  \psi_{0}  $と表せます. ちなみに$ \hbar = 1 $ となるような単位系を用いています.
+
+    ここまで準備したところで時間を止める本題です. 「時間が止まる」というのは, 「一定時間経過した後も最初と同じ状態のままである」と言い換えることが出来ます. 上の節で言った通り, $  \tau $ だけ時間発展した後に初期状態となる確率\footnote{生存確率という} $ p(\tau) $ は,
+    \[
+    p(\tau) := | \braket{\psi_{0} | \psi (\tau )} | ^2 = | \braket{\psi_{0} |  e^{-iH\tau}  \psi_{0}}| ^2
+    \]
+    と書けます. $ \tau $ が極めて短い時間であるとき, この時間発展の作用素はテイラー展開することが出来て, なんかとりあえず程々にがんばって色々と計算すると
+    $  (\Delta H ) ^2 := \braket{\psi_{0} |H^2 \psi_{0}} - \braket{\psi_{0} |H \psi_{0}}^2$ として
+    \[
+    p(\tau) = 1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4)
+    \]
+    となります. さて, 有限時間$ t $ 経過した後の生存確率は時間$ \tau $ の時間発展を$ n $ 回繰り返したと考えて $ t = n \tau $ として計算します. このとき,  $ p(t) = p(n \tau ) = p(\tau) ^n $ が成立するので, 結局,
+    \begin{equation} \label{eq:sp}
+    p(t) =  (1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4))^n
+    \end{equation}
+    が生存確率です. $t$ を定数(与えられた有限時間)とすると, $ n $ を大きくすることで $ \tau $ を小さく出来る, つまり極めて短い時間の測定をたくさん繰り返していることを意味します. \eqref{eq:sp}で$ n \to \infty $ の極限をとると,
+    \[
+    (1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4))^n  \to 1
+    \]
+    なので, 生存確率は1となって初期状態が確率1で再現する(時間発展が抑制されている)ことがわかります.
+
+    長くなりましたが, 私たちは時間を止める魔法を定式化することに成功しました. 果たしてこれでシュレーディンガーの猫は救えるのでしょうか?
+
+    \subsection{猫救出作戦}
+    箱に閉じ込めた猫の初期状態を$ \ket{\psi_{0}} = \ket{\mathrm{alive}} $ とします. ここで $ \ket{\mathrm{dead}} $ を初期状態に選ぶと大変ヤバイことになります.
+
+    以下では計算はしませんが, 直観的には猫の状態を測定し続ければZeno効果により猫の状態は変化しないことになり, したがって猫は死にません. つまり\emph{シュレーディンガーの猫を救出するには箱に覗き窓をつけて猫を眺め続ければいい}ということになります. なんだ, 長々計算した割に簡単な結果でしたね.
+
+    \subsection{まともなまとめ}
+    以上の議論を素朴に信じると, 猫が死なないということは放射性元素が崩壊しないことを意味します. 猫を眺めることで元素の崩壊を止められるなんてありえるんでしょうか?
+
+    ---もちろん, そんなことはありません. 猫は死ぬときは死にます. 箱に覗き窓をつけたところで, 確率$ 1/2 $ で猫の断末魔を目の当たりにするだけです. 多分トラウマになるのでやらないほうがいいと思います. なんでこんなパラドックスが起きるのか, それはミクロな物理学である量子論をマクロな系(猫)に適用したことに原因があります. 見つめられたら動けなくなるというのは, 確かにラブソングの中の美人(またはイケメン)くらいしか出来ないようです. もしくはメデューサ.
+
+    実際, 量子論には色々とデリケートな問題がついて回ります. Zeno効果にも実はまだまだ色々と条件があるし, シュレーディンガーの猫そのものも実はそんなに単純な話じゃなかったりします. こういう問題は難しいですが, これからの技術, 例えば量子情報などを支える重要な理論です. もし何か興味があったら大学で勉強してみてください. その土壌が京都大学にはあります.
+
+    結論, 猫を助けたければ箱の中に入れなきゃいい.
 
 		\rightline{(文: まつたけ)}
 
@@ -1505,7 +1543,7 @@
 
   \section{写給寮外的中国人}
   %「给」は出力できず. 中文対応するほどの能力と忍耐力は私はなかった
-\foreignlanguage{schinese}{给}
+%\foreignlanguage{schinese}{给}
 \begin{figure}[h]
 		\begin{center}
  	 	\includegraphics[scale=0.90]{voice.pdf}
@@ -2332,6 +2370,8 @@
 		\end{description}
 
 		\end{multicols}
+
+
 
 
 \end{document}
