メモページ追加

--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -1469,7 +1469,7 @@
     \[
     \| \psi \|^2 := \braket{\psi | \psi}
     \]
-    で定義します. $ \bra{\cdot} $ は\textbf{ブラ}といいます. また, 状態を表すベクトルは大きさが1であること, つまり$ \|\mathrm{alive}\|^2 = \braket{\mathrm{alive}|\mathrm{alive} } = 1 $ を要求します. 死亡状態dead も同様のことが成り立ちます. 同時に成り立たない状態は実現しないので, $ \braket{\mathrm{alive}|\mathrm{dead} } = \braket{\mathrm{dead}|\mathrm{alive} }  =0$ が成り立ちます. 以上の計算法則を用いて, 生きている確率と死んでいる確率はどちらも
+    で定義します. $ \bra{\cdot} $ は\textbf{ブラ}といいます. ケットと合わせてブラケット(bracket: 括弧の意)です. また, 状態を表すベクトルは大きさが1であること, つまり$ \|\mathrm{alive}\|^2 = \braket{\mathrm{alive}|\mathrm{alive} } = 1 $ を要求します. 死亡状態dead も同様のことが成り立ちます. 同時に成り立たない状態は実現しないので, $ \braket{\mathrm{alive}|\mathrm{dead} } = \braket{\mathrm{dead}|\mathrm{alive} }  =0$ が成り立ちます. 以上の計算法則を用いて, 生きている確率と死んでいる確率はどちらも
     \[
     | \braket{\psi | \mathrm{alive} } | ^2 = | \braket{\psi | \mathrm{dead} } |^2= \frac{1}{2}
     \]
@@ -2370,6 +2370,11 @@
 		\end{description}
 
 		\end{multicols}
+
+    \newpage \subsubsection{$ \mathcal{MEMO}$ }
+
+    \newpage \subsubsection{$ \mathcal{MEMO}$ }
+
 
 
 
