--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -177,6 +177,13 @@
 			\end{description}
 		\end{description}
 
+    \begin{wrapfigure}[0]{r}[0pt]{0.5\textwidth}
+  		\includegraphics[scale=0.3]{terrace.pdf}
+  			%\caption{}
+  			\vspace*{-\intextsep}
+  			\label{fig:屋上}
+  			\end{wrapfigure}
+
 		\subsection{建物概略}
 		\begin{description}
 		\item 4階建て鉄筋コンクリート3棟(A棟, B棟, C棟, 食堂)
@@ -185,6 +192,8 @@
 		\item[居室] A棟16畳,  B棟18畳(定員4名), C棟(定員2名)\footnote{C棟は3部屋を6人で用いるなどしています}
 		\item[備品] 事務机, 椅子, 本棚, 二段ベッド, クローゼット
 		\end{description}
+
+
 
 %ここに建物の写真か何か入れる
 
@@ -207,6 +216,12 @@
 		\item[民青池]たまに飛び込む者がいる. 寮祭企画$ \cdot $ みかん祭りの開催場所になったりもする. 元々は消火用.
 		\item[娯楽]食堂の卓球台, 敷地内のバスケットゴール$ \cdot $ フットサルコートなどに加え, 部屋で受け継がれているものもある.
 		\end{description}
+
+    \begin{figure}[h]
+    		\begin{flushleft}
+     	 	\includegraphics[scale=0.3]{muc.pdf}
+    		\end{flushleft}
+    		\end{figure}
 
 %ここにも写真欲しい
 
