--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -177,12 +177,12 @@
 			\end{description}
 		\end{description}
 
-    \begin{wrapfigure}[0]{r}[0pt]{0.5\textwidth}
-  		\includegraphics[scale=0.3]{terrace.pdf}
+    %\begin{wrapfigure}[0]{r}[0pt]{0.5\textwidth}
+  	%	\includegraphics[scale=0.3]{terrace.pdf}
   			%\caption{}
-  			\vspace*{-\intextsep}
-  			\label{fig:屋上}
-  			\end{wrapfigure}
+  	%		\vspace*{-\intextsep}
+  	%		\label{fig:屋上}
+  	%		\end{wrapfigure}
 
 		\subsection{建物概略}
 		\begin{description}
