Updates from Overleaf

--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -1454,6 +1454,8 @@
   \section{シュレーディンガーの猫救出作戦ノ記録}
 
   みなさんこんにちは. ここではせっかく \LaTeX を使っているので数式で何かやってみようと思って, なんかシュレーディンガーの猫にまつわる諸々を書いてみようと思います.
+  
+  結構ざっくりした話になるのであまり正確なことは言ってませんし, 何より締め切り間際に深夜に書いているので結構間違いもあると思いますがご容赦ください. 
 
     \subsection{シュレーディンガーの猫}
     シュレーディンガーの猫について聞いたことくらいはあると思います. 簡単に説明すると, 箱の中に猫と放射性元素, 毒ガスを放出できる放射線検知器を入れておきます. 箱の中見えません. 一定時間経過後, 箱の中では確率$ 1/2 $ で放射性元素は崩壊し, 放射線を出します. このとき, 検知器が作動し毒ガスが箱の中に充満し猫は残念なことにその生涯を終えることになります. しかし, 箱の中が見えないのでフタを開けるまでは猫の生死はわかりません. このとき, 猫は生きている状態と死んでいる状態の両方の状態にある, と説明されます. この猫のことをシュレーディンガーの猫と言います. そんなアホなと思うかもしれませんが, 量子論と呼ばれる物理学の分野ではこれが成立します. ちなみに箱を開けるときは換気を十分にするか防毒マスクをつけないと自分も巻き添えになりうるのでお気をつけください.
