Updates from Overleaf

--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -1500,7 +1500,7 @@
     これを定式化します. 簡単に説明するのは不可能なので, よくわからんって人は諦めて次節まで読み飛ばしてください.
 
     \subsubsection{射影測定によるZeno効果の定式化}
-    $ \mathscr{H} $ をヒルベルト空間とし, $ \psi (t) \in \mathscr{H} $ とする. 系の初期状態を$ \psi_{0} := \psi (0)  $とします. $H$ を$ \mathscr{H} $ 上に作用するハミルトニアンとします. このとき, 系の時間発展は$ \psi (t) = e^{-iHt}  \psi_{0}  $と表せます. ちなみに$ \hbar = 1 $ となるような単位系を用いています.
+    $ \mathscr{H} $ をヒルベルト空間とし, $ \psi (t) \in \mathscr{H} $ とします. さらに系の初期状態を$ \psi_{0} := \psi (0)  $とし,$H$ を$ \mathscr{H} $ 上に作用するハミルトニアンとします. このとき,  系の時間発展は$ \psi (t) = e^{-iHt}  \psi_{0}  $と表せます. ちなみに$ \hbar = 1 $ となるような単位系を用いています.
 
     ここまで準備したところで時間を止める本題です. 「時間が止まる」というのは, 「一定時間経過した後も最初と同じ状態のままである」と言い換えることが出来ます. 上の節で言った通り, $  \tau $ だけ時間発展した後に初期状態となる確率\footnote{生存確率という} $ p(\tau) $ は,
     \[
